# flgl

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Graphics.cpp  Graphics.h  Makefile  README.md  Shader.cpp  ShaderContainer.cpp  Window.h  flgl.h  flgl_math.h  macos_Makefile  setup.sh  xcode_search_paths.rtf
Shaders/: test_vert_shader.glsl
egs/: eg_makefile
flgl/: Camera.cpp  Camera.h  FLGL_Presets.cpp  FLGL_Presets.h  GL_Loader.cpp  GL_Loader.h  Graphics.cpp  Graphics.h  ID_Map.h  Meshes.h  Shader.cpp  Shader.h  Vertex.cpp  Vertex.h  Window.cpp  Window.h  flgl_math.cpp  flgl_math.h  flgl_presets.cpp  gfx.h
flgl/Shaders/: raw_texture_frag_shader.glsl
flgl/default_shaders/: font_frag_shader.glsl  font_vert_shader.glsl  perlin_frag_shader.glsl  raw_texture_frag_shader.glsl  screenwide_vert_shader.glsl  test_frag_shader.glsl  test_vert_shader.glsl
inc/: Meshes.h  flgl.h
inc/flgl/: all.h  allocators.h  camera.h  config.h  core.h  coreal.h  coregl.h  driver.h  ecs.h  geometry.h  glm.h  logger.h  misc.h  render.h  stb.h  text_renderer.h  tools.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/default_shaders/: axes_frag.glsl  axes_vert.glsl  color.glsl  font_frag.glsl  font_vert.glsl  passthrough_vert.glsl  passvec3_vert.glsl  perlin_frag_shader.glsl  raw_texture_frag_shader.glsl  shadow_vert.glsl  skybox_frag.glsl  skybox_vert.glsl  test_frag_shader.glsl
src/: Framebuffer.cpp  Framebuffer.h  FramebufferRGBZ.cpp  FramebufferRGBZ.h  GL_Loader.cpp  GL_Loader.h  Graphics.cpp  Graphics.h  README.md  Renderbuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Verticies.cpp  Verticies.h  Window.cpp  Window.h  core.cpp  core.h  device_object.cpp  device_object.h  flgl.cpp  flgl.h  flgl_config.cpp  flgl_config.h  flgl_math.cpp  flgl_presets.cpp  flgl_presets.h  gfx.h
src/allocators/: abstract_freelist_objpool.h  abstract_linear_objpool.h  bump_alloc.h  c_abstract.h
src/coreal/: Audio.cpp  Audio.h  al.h  oal.h
src/coreal/al_objs/: AL_Buffer.cpp  AL_Buffer.h  AL_Context.cpp  AL_Context.h  Source.cpp  Source.h
src/coregl/: Graphics.cpp  Graphics.h  Window.cpp
src/coregl/gl_objs/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  GL_Buffer.cpp  GL_Buffer.h  GL_Object.cpp  InstanceBuffer.cpp  InstanceBuffer.h  Mesh.h  Renderbuffer.cpp  Renderbuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/default_shaders/: font_frag_shader.glsl  fullscreen_vert.glsl  post_process_template_frag.glsl  test_vert_shader.glsl
src/ecs/inc/: ECS.h
src/engine/: Driver.cpp  Driver.h
src/gl_objects/: Framebuffer.h  GL_Object.cpp  GL_Object.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  Window.cpp  Window.h
src/gl_objs/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  FramebufferRGBZ.cpp  FramebufferRGBZ.h  GL_Object.cpp  GL_Object.h  InstanceBuffer.cpp  InstanceBuffer.h  Mesh.h  Renderbuffer.cpp  Renderbuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexElementArray.cpp  VertexElementArray.h
src/logger/: log_cfg.h
src/math/: flgl_math.cpp  flgl_math.h  geometry.cpp  geometry.h
src/misc/: lib_impl.cpp
src/render/: Camera.cpp  Camera.h  DefaultMeshes.cpp  DefaultMeshes.h  SkyboxRenderer.cpp  SkyboxRenderer.h  TextRenderer.cpp  TextRenderer.h
src/tools/: BasicRenderer.cpp  BasicRenderer.h  Camera.cpp  Camera.h  DefaultMeshes.cpp  DefaultMeshes.h  Driver.cpp  Driver.h  TextRenderer.cpp  TextRenderer.h  flgl_math.cpp  flgl_math.h  flgl_presets.cpp  flgl_presets.h  geometry.cpp  geometry.h
src/util/: abstract_freelist_objpool.h  abstract_linear_objpool.h  bump_alloc.h  log.cpp  log.h  log_cfg.h  misc.h  stopwatch.cpp  stopwatch.h
user/: README.md  hellowindow.cpp  setup.sh  user_CMakeLists.txt  user_Makefile
